# Analyzer

./: .gitignore  README.md  analyzer_docs.md  categorizer.py  cli.py  config.py  csv_columns.py  csv_load.py  menu.py  metrics.py  mock_data.py  output.py  parsing.py  pyproject.toml  records.py  requirements.txt  schemas.py  storage.py  textutil.py  version.py
Schema/: README.md  analysis-report.schema.json  analyzer-config.schema.json  anomaly-report.schema.json  categorized-record.schema.json  category-rule.schema.json  category-summary-row.schema.json  classification-result.schema.json  day-of-week-spend-row.schema.json  duplicate-detection-result.schema.json  duplicate-exact-item.schema.json  duplicate-near-item.schema.json  merchant-frequency-summary-row.schema.json  merchant-spend-summary-row.schema.json  monthly-trend-row.schema.json  reconciliation-pair.schema.json  reconciliation-record.schema.json  reconciliation-report.schema.json  reconciliation-set-summary.schema.json  run-reconciliation-result.schema.json  schema-index.json  spending-anomaly-row.schema.json  time-of-month-split.schema.json  weekend-weekday-summary.schema.json
tests/: test_analyzer_reports.py  test_categorizer.py  test_categorizer_extra.py  test_categorizer_menu.py  test_cli.py  test_cli_extra.py  test_config.py  test_csv_columns.py  test_csv_load.py  test_menu_module.py  test_metrics.py  test_mock_data.py  test_output.py  test_parsing.py  test_records.py  test_storage.py  test_storage_extra.py  test_textutil.py  test_version.py
