[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ll-analyzer"
version = "0.1.0"
description = "Financial pattern detector for categorized transactions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typing_extensions>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
ll-analyzer = "cli:entrypoint"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools]
py-modules = [
    "cli",
    "config",
    "csv_columns",
    "csv_load",
    "categorizer",
    "menu",
    "metrics",
    "mock_data",
    "output",
    "parsing",
    "records",
    "schemas",
    "storage",
    "textutil",
    "version",
]
